modified data generator for relationships

--- a/Project2/south_park_data_generator.ipynb
+++ b/Project2/south_park_data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9052d251",
+   "id": "1a36e236",
    "metadata": {},
    "source": [
     "In this script, the data needed for the network analysis of the show South Park are generated. These are:  \n",
@@ -24,24 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3f4230fa",
+   "execution_count": 114,
+   "id": "77ae4bf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp2\\ipykernel_10368\\3947806153.py:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Necessary imports\n",
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import numpy as np\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
@@ -51,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "247a84ca",
+   "id": "81fa4e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac63b47",
+   "id": "a2463b94",
    "metadata": {},
    "source": [
     "### Part 1: Get the scripts links for all episodes of each season  \n",
@@ -74,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f08e3de",
+   "id": "72c7d271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d5775b6",
+   "id": "5ddeea60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b06031",
+   "id": "2841235c",
    "metadata": {},
    "source": [
     "Links for each season:"
@@ -127,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92554e47",
+   "id": "2cb0b517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac5e3626",
+   "id": "a843ff98",
    "metadata": {},
    "source": [
     "From the textbox of source page of each wiki link, two elements can be identified:  \n",
@@ -180,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dff07147",
+   "id": "f1e76d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ff4ed29c",
+   "id": "1e5f147c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dbb6e448",
+   "id": "09c2bff7",
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +301,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a41e35",
+   "id": "a8a4f436",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2a339c38",
+   "id": "05b74aeb",
    "metadata": {},
    "source": [
     "### Part 2: Get the characters from the documents  \n",
@@ -326,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0fc871fb",
+   "id": "8e1bc469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ba41eb02",
+   "id": "80eb3a78",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "024c45d3",
+   "id": "99dbfd06",
    "metadata": {},
    "source": [
     "### Relationships between characters"
@@ -407,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "34c68377",
+   "id": "3306e921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8130b9",
+   "id": "8dd72f2c",
    "metadata": {},
    "source": [
     "We are only interested in the names of the characters here. So we can create a dictionary with keys the full name and values the first name. Or maybe we could create two lists:"
@@ -425,42 +417,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "9bc5a05f",
+   "execution_count": 109,
+   "id": "64c9c261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go with the two lists approach\n",
+    "names = characters_df.name.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "3b79be76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary to create a data frame from it afterwards\n",
+    "# It will be of the form:   'first_char': 'second_char'\n",
+    "characters_interactions = {} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54062533",
+   "metadata": {},
+   "source": [
+    "Define two functions used to search for names and relationships in the scripts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c3146160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_characters_in_text(text, characters_list):\n",
+    "#     txt_list_tmp = [ el.strip() for el in text.split('\\n') if el ]\n",
+    "#     char_list = []\n",
+    "#     for character in characters_list:\n",
+    "#         if character in txt_list_tmp:\n",
+    "#             char_list.append(character)\n",
+    "    pattern = r'\\n(.+)\\s:'\n",
+    "    matches = re.findall(pattern, text)\n",
+    "    chars = [nm.strip() for nm in matches]\n",
+    "    \n",
+    "    char_list = []\n",
+    "    for character in chars:\n",
+    "        if character in characters_list:\n",
+    "            char_list.append(character)\n",
+    "    \n",
+    "    return char_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "14715670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_relationship_dict(char_list):\n",
+    "    relationship_dict_list = []\n",
+    "    for i, el in enumerate(char_list[:-1]):\n",
+    "        for character in char_list[i+1:]:\n",
+    "            if not character == el:\n",
+    "                relationship_dict_list.append({ 'source':el, 'target':character })\n",
+    "    return relationship_dict_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "bf9300e5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'first_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3799\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3800\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3801\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'first_name'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp2\\ipykernel_10368\\217207066.py\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Go with the two lists approach\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mfull_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcharacters_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfirst_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcharacters_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'first_name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3803\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3804\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3805\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3806\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3807\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3800\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3801\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3802\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3803\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3804\u001b[0m                 \u001b[1;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'first_name'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66499e6b3fd04df69f5a37e4e4b92c92",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Go with the two lists approach\n",
-    "full_names = characters_df.name.to_list()\n",
-    "first_names = characters_df['first_name'].to_list()"
+    "# Define a regex pattern. Compile it to be faster since there are many files\n",
+    "pattern = r\"[+]{2}\\n([^+]+)[+]{2}\"\n",
+    "prog = re.compile(pattern)\n",
+    "\n",
+    "total_relationships_dict_list = []\n",
+    "\n",
+    "for file_ in tqdm(scripts_dir.glob('**/*.txt')):\n",
+    "        \n",
+    "    episode_relationship_dict_list = []\n",
+    "    season_nr = file_.as_posix().split('/')[-2]\n",
+    "    fname = file_.as_posix().split('/')[-1]\n",
+    "    fname = fname.split('.')[0]\n",
+    "    \n",
+    "    # Create a folder for each season and save the csv of the relationships in there for each episode\n",
+    "    season_path = relationships_path / f\"{season_nr}\"\n",
+    "    season_path.mkdir(exist_ok=True)\n",
+    "    \n",
+    "    with open(file_, 'r', encoding='utf-8') as f:\n",
+    "        test_txt = f.read()\n",
+    "            \n",
+    "    \n",
+    "    # Use regex to find the text between the pluses\n",
+    "    results = prog.findall(test_txt)\n",
+    "    for result in results:\n",
+    "        # Get the list of characters in this scene\n",
+    "        chars_in_part = get_characters_in_text(result, names)\n",
+    "        # If there are more than 1 characters in the list, create a relationship between them and\n",
+    "        # append to the corresponding lists\n",
+    "\n",
+    "        if len(chars_in_part)>1:\n",
+    "            rel_lst = create_relationship_dict(chars_in_part)                \n",
+    "            episode_relationship_dict_list += rel_lst\n",
+    "            total_relationships_dict_list += rel_lst\n",
+    "    \n",
+    "    # For this episode, create now a dataframe from the episode relationships\n",
+    "    episode_rel_df = pd.DataFrame(episode_relationship_dict_list)\n",
+    "    \n",
+    "    # I have duplicates. I can add them as weights.\n",
+    "    # But first to have all of the same names on the same column\n",
+    "    # I want for a specific pair of source and target\n",
+    "    # the source to be always on the same column of the dataframe\n",
+    "    episode_rel_df = pd.DataFrame( np.sort(episode_rel_df.values, axis=1), columns=episode_rel_df.columns )\n",
+    "    \n",
+    "    # For the duplicates, we can add them up to form weights on the edges, representing\n",
+    "    # how strong the relationship is\n",
+    "    episode_rel_df['weight'] = 1 # initialize\n",
+    "    try:\n",
+    "        episode_rel_df = episode_rel_df.groupby(['source', 'target'], sort=False, as_index=False).sum()\n",
+    "        episode_rel_df.to_csv(season_path.as_posix()+'/'+fname+'.csv')\n",
+    "    except KeyError as e:\n",
+    "        print(e)\n",
+    "        print(season_nr, fname)\n",
+    "        print(episode_rel_df)\n",
+    "        print()\n",
+    "        \n",
+    "        \n",
+    "# Do the same for the total relationship\n",
+    "total_relationships_dict_list = pd.DataFrame(total_relationships_dict_list)\n",
+    "total_relationships_dict_list = pd.DataFrame( np.sort(total_relationships_dict_list.values, axis=1), columns=total_relationships_dict_list.columns )\n",
+    "total_relationships_dict_list['weight'] = 1\n",
+    "total_relationships_dict_list = total_relationships_dict_list.groupby(['source', 'target'], sort=False, as_index=False).sum()\n",
+    "total_relationships_dict_list.to_csv(relationships_path.as_posix()+'/'+'total_relationships'+'.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f6d690",
+   "id": "3a468f98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b47965b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7413d623",
    "metadata": {},
    "outputs": [],
    "source": []
