--- a/Project2/south_park_data_generator.ipynb
+++ b/Project2/south_park_data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1a36e236",
+   "id": "2da7d36e",
    "metadata": {},
    "source": [
     "In this script, the data needed for the network analysis of the show South Park are generated. These are:  \n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "77ae4bf0",
+   "id": "1db5bf62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81fa4e01",
+   "id": "3aa713d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2463b94",
+   "id": "4781c5f8",
    "metadata": {},
    "source": [
     "### Part 1: Get the scripts links for all episodes of each season  \n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "72c7d271",
+   "id": "00e79020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ddeea60",
+   "id": "7fa1389d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2841235c",
+   "id": "22f541dc",
    "metadata": {},
    "source": [
     "Links for each season:"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2cb0b517",
+   "id": "92dcd1de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a843ff98",
+   "id": "ce6e854f",
    "metadata": {},
    "source": [
     "From the textbox of source page of each wiki link, two elements can be identified:  \n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f1e76d41",
+   "id": "d11de928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1e5f147c",
+   "id": "29510169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
     "    \n",
     "    # Take only the parts between scenes. Each episode starts with a scene and ends with dialogue\n",
     "    starts = starts[1:]\n",
-    "    ends = ends[0:-1]\n",
+    "    ends = ends[:-1]\n",
     "    \n",
     "    # Start creating the document for this episode\n",
     "    document = ''\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "09c2bff7",
+   "id": "d852e136",
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +301,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8a4f436",
+   "id": "616c3d0c",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "05b74aeb",
+   "id": "26ee6883",
    "metadata": {},
    "source": [
     "### Part 2: Get the characters from the documents  \n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "8e1bc469",
+   "id": "6878d645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "80eb3a78",
+   "id": "a261751c",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99dbfd06",
+   "id": "642c9722",
    "metadata": {},
    "source": [
     "### Relationships between characters"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "3306e921",
+   "id": "b06f9616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd72f2c",
+   "id": "18635cba",
    "metadata": {},
    "source": [
     "We are only interested in the names of the characters here. So we can create a dictionary with keys the full name and values the first name. Or maybe we could create two lists:"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "64c9c261",
+   "id": "62b11688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3b79be76",
+   "id": "fc9badf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54062533",
+   "id": "9c042c5b",
    "metadata": {},
    "source": [
     "Define two functions used to search for names and relationships in the scripts:"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "c3146160",
+   "id": "c543c15d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "14715670",
+   "id": "fdb8b492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "bf9300e5",
+   "id": "072d330d",
    "metadata": {},
    "outputs": [
     {
@@ -575,8 +575,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 126,
+   "id": "c5078521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>target</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cartman</td>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>20424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>Stan</td>\n",
+       "      <td>17032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ike</td>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cartman</td>\n",
+       "      <td>Stan</td>\n",
+       "      <td>16278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cartman</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23238</th>\n",
+       "      <td>Woman</td>\n",
+       "      <td>Yates</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23239</th>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Saint Patrick</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23240</th>\n",
+       "      <td>Saint Patrick</td>\n",
+       "      <td>Woman</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23241</th>\n",
+       "      <td>Man</td>\n",
+       "      <td>Saint Patrick</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23242</th>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Woman</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23243 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              source         target  weight\n",
+       "0            Cartman           Kyle   20424\n",
+       "1               Kyle           Stan   17032\n",
+       "2                Ike           Kyle     591\n",
+       "3            Cartman           Stan   16278\n",
+       "4            Cartman            Ike     209\n",
+       "...              ...            ...     ...\n",
+       "23238          Woman          Yates       8\n",
+       "23239       Everyone  Saint Patrick       8\n",
+       "23240  Saint Patrick          Woman      32\n",
+       "23241            Man  Saint Patrick      40\n",
+       "23242       Everyone          Woman       4\n",
+       "\n",
+       "[23243 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_relationships_dict_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3a468f98",
+   "id": "5e82bb11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -584,15 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b47965b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7413d623",
+   "id": "c4012884",
    "metadata": {},
    "outputs": [],
    "source": []
