changes in characters selection. Correction for Randy

--- a/Project2/south_park_data_generator.ipynb
+++ b/Project2/south_park_data_generator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "id": "1db5bf62",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "3aa713d0",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "00e79020",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "7fa1389d",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "92dcd1de",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d11de928",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "29510169",
    "metadata": {},
    "outputs": [],
@@ -234,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d852e136",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b5982786f7e4ec2b0b06a276d8283a9",
+       "model_id": "d5a01725e2974705bc8b0d1317a27f74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,12 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616c3d0c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "26ee6883",
    "metadata": {},
    "source": [
@@ -317,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 93,
    "id": "6878d645",
    "metadata": {},
    "outputs": [],
@@ -331,9 +325,12 @@
     "        # Remove groups\n",
     "        if len(match.split(','))>1:\n",
     "            continue\n",
-    "        if len(match.split('and'))>1:\n",
+    "        if len(match.split(' and '))>1:\n",
     "            continue\n",
+    "        if len(match.strip().split(\" \")) > 1 and match.strip().split(' ')[-1].isnumeric():\n",
+    "            continue        \n",
     "        characters.append(match.strip())\n",
+    "        \n",
     "    \n",
     "    # Remove duplicates due to introduction\n",
     "    single_name = [character for character in set(characters) if len(character.split())<2]\n",
@@ -347,20 +344,25 @@
     "\n",
     "    characters = single_name[:] + tmp_dual_chars[:]\n",
     "    \n",
+    "    # Remove the aggregation of Man and Woman\n",
+    "    if 'Man' in characters:\n",
+    "        characters.remove('Man')\n",
+    "    if 'Woman' in characters:\n",
+    "        characters.remove('Woman')\n",
     "    \n",
-    "    return characters"
+    "    return set(characters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 94,
    "id": "a261751c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc18b23e96044bf59d1c7552e474e951",
+       "model_id": "f89c2244e28748be9cf7e668632af5a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "b06f9616",
    "metadata": {},
    "outputs": [],
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "id": "62b11688",
    "metadata": {},
    "outputs": [],
@@ -428,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "id": "fc9badf8",
    "metadata": {},
    "outputs": [],
@@ -448,17 +450,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "id": "c543c15d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_characters_in_text(text, characters_list):\n",
-    "#     txt_list_tmp = [ el.strip() for el in text.split('\\n') if el ]\n",
-    "#     char_list = []\n",
-    "#     for character in characters_list:\n",
-    "#         if character in txt_list_tmp:\n",
-    "#             char_list.append(character)\n",
+    "\n",
     "    pattern = r'\\n(.+)\\s:'\n",
     "    matches = re.findall(pattern, text)\n",
     "    chars = [nm.strip() for nm in matches]\n",
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 23,
    "id": "fdb8b492",
    "metadata": {},
    "outputs": [],
@@ -489,14 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "id": "072d330d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66499e6b3fd04df69f5a37e4e4b92c92",
+       "model_id": "bfa05e4f77e84a24a65f05a1020ad8a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "id": "c5078521",
    "metadata": {},
    "outputs": [
@@ -643,38 +641,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23238</th>\n",
+       "      <th>16766</th>\n",
        "      <td>Woman</td>\n",
        "      <td>Yates</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23239</th>\n",
+       "      <th>16767</th>\n",
        "      <td>Everyone</td>\n",
        "      <td>Saint Patrick</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23240</th>\n",
+       "      <th>16768</th>\n",
        "      <td>Saint Patrick</td>\n",
        "      <td>Woman</td>\n",
        "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23241</th>\n",
+       "      <th>16769</th>\n",
        "      <td>Man</td>\n",
        "      <td>Saint Patrick</td>\n",
        "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23242</th>\n",
+       "      <th>16770</th>\n",
        "      <td>Everyone</td>\n",
        "      <td>Woman</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>23243 rows × 3 columns</p>\n",
+       "<p>16771 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -685,16 +683,16 @@
        "3            Cartman           Stan   16278\n",
        "4            Cartman            Ike     209\n",
        "...              ...            ...     ...\n",
-       "23238          Woman          Yates       8\n",
-       "23239       Everyone  Saint Patrick       8\n",
-       "23240  Saint Patrick          Woman      32\n",
-       "23241            Man  Saint Patrick      40\n",
-       "23242       Everyone          Woman       4\n",
+       "16766          Woman          Yates       8\n",
+       "16767       Everyone  Saint Patrick       8\n",
+       "16768  Saint Patrick          Woman      32\n",
+       "16769            Man  Saint Patrick      40\n",
+       "16770       Everyone          Woman       4\n",
        "\n",
-       "[23243 rows x 3 columns]"
+       "[16771 rows x 3 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,22 +700,6 @@
    "source": [
     "total_relationships_dict_list"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e82bb11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4012884",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
